Fixed about footer text align.

--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -803,4 +803,5 @@ img.prefix-icon {
 .about-page footer p {
 	margin: 0;
 	padding: 4px;
+	text-align: center;
 }
